# DeepSpeed

./: .gitignore  Cargo.toml  README.md
config/: deepspeed.toml
scripts/: install.ps1  install.sh
src/: actions.rs  ai_engine.rs  config.rs  main.rs  monitor.rs  optimizer.rs  process_intel.rs  tui.rs
