[package]
name = "deepspeed"
version = "0.1.0"
edition = "2021"
description = "AI-powered macOS system optimizer for M2/8GB"
authors = ["DeepSpeed"]

[[bin]]
name = "deepspeed"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
